# spark-streaming-sentiment-local

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  dockerfile  pyproject.toml
app/: config.py  consumer_printer.py  producer.py
app/jobs/: sentiment.py
app/schemas/: tweet.py
app/scripts/: consumer.py  generate_docs.sh  producer.py
docs/: ENGINEERING_GUIDE.md
docs/adr/: 001-uso-do-kafka.md
infra/: Dockerfile
