[project]
name = "spark-kafka-lab"
version = "0.1.0"
description = "Lab de Engenharia de Dados com Spark Streaming e Kafka"
authors = [{name = "Seu Nome", email = "seu.email@exemplo.com"}]
requires-python = ">=3.10"
dependencies = [
    "pyspark==3.5.0",
    "kafka-python-ng==2.2.2",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "nltk>=3.8.1",
    "faker>=20.0.0"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.setuptools]
packages = ["app"]
